--- a/package.json
+++ b/package.json
@@ -12,12 +12,20 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@epic-web/invariant": "^1.0.0",
+    "@livekit/components-react": "^2.4.3",
+    "@livekit/components-styles": "^1.0.12",
     "@remix-run/node": "^2.11.2",
     "@remix-run/react": "^2.11.2",
     "@remix-run/serve": "^2.11.2",
+    "clsx": "^2.1.1",
     "isbot": "^4.1.0",
+    "livekit-client": "^2.5.1",
+    "livekit-server-sdk": "^2.6.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwind-merge": "^2.5.2",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.11.2",
